--- a/recovery/root/init.recovery.qcom.rc
+++ b/recovery/root/init.recovery.qcom.rc
@@ -18,5 +18,7 @@ on boot
     start recovery
     
 on property:graphics.display.kernel_idle_timer.enabled=true
+    # Switch display mode to 140hz when idle
+    write /sys/devices/platform/soc/soc:qcom,dsi-display-primary/idle_mode "@140"
     # Switch display mode to 60hz when idle
-    write /sys/devices/platform/soc/soc:qcom,dsi-display-primary/idle_mode "@60"
+#    write /sys/devices/platform/soc/soc:qcom,dsi-display-primary/idle_mode "@60"
